// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formInformation parses 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "negativeUaWithin90Days": {
      "latestUaDates": [],
      "latestUaResults": [],
    },
    "noFelonyWithin24Months": true,
    "pastEarnedDischargeEligibleDate": {
      "eligibleDate": 2022-05-22T00:00:00.000Z,
    },
    "usIdLsirLevelLowModerateForXDays": {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
      "riskLevel": "MODERATE",
    },
  },
  "eligibleStartDate": 2022-10-05T00:00:00.000Z,
  "externalId": "001",
  "formInformation": {
    "caseNumbers": [
      "12858",
      "13085",
      "14558",
    ],
    "chargeDescriptions": [
      "Shoplifting",
      "Public Intoxication",
      "Trespassing",
    ],
    "countyNames": [
      "Duane",
      "Duane",
      "Moraga",
    ],
    "dateImposed": [
      2022-08-13T00:00:00.000Z,
      2022-09-30T00:00:00.000Z,
      2022-10-03T00:00:00.000Z,
    ],
    "firstAssessmentDate": 2020-03-28T00:00:00.000Z,
    "firstAssessmentScore": 27,
    "fullTermReleaseDates": [
      2023-08-11T00:00:00.000Z,
      2023-07-30T00:00:00.000Z,
      2023-06-10T00:00:00.000Z,
    ],
    "judgeNames": [
      {
        "givenNames": "Starla",
        "surname": "Murieta",
      },
      {
        "givenNames": "Raymond",
        "surname": "Dart",
      },
      {
        "givenNames": "Ahmud",
        "surname": "Blake",
      },
    ],
    "latestAssessmentDate": 2022-10-24T00:00:00.000Z,
    "latestAssessmentScore": 19,
    "ncicCheckDate": 2022-11-10T00:00:00.000Z,
    "sentenceMax": [
      365,
      334,
      60,
    ],
    "sentenceMin": [
      92,
      61,
      15,
    ],
  },
  "ineligibleCriteria": {},
  "stateCode": "US_ID",
}
`;

exports[`optional criteria have sane fallbacks 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "negativeUaWithin90Days": {
      "latestUaDates": [],
      "latestUaResults": [],
    },
    "noFelonyWithin24Months": true,
    "pastEarnedDischargeEligibleDate": {
      "eligibleDate": 2022-05-22T00:00:00.000Z,
    },
    "usIdLsirLevelLowModerateForXDays": {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
      "riskLevel": "MODERATE",
    },
  },
  "eligibleStartDate": 2022-10-05T00:00:00.000Z,
  "externalId": "001",
  "formInformation": {},
  "ineligibleCriteria": {},
  "stateCode": "US_ID",
}
`;

exports[`transform dual/parole record 1`] = `
{
  "caseNotes": {
    "foo": [
      {
        "eventDate": 2022-04-06T00:00:00.000Z,
        "noteBody": "Body1",
        "noteTitle": "Title1",
      },
    ],
  },
  "eligibleCriteria": {
    "negativeUaWithin90Days": {
      "latestUaDates": [
        2022-01-03T00:00:00.000Z,
      ],
      "latestUaResults": [
        false,
      ],
    },
    "noFelonyWithin24Months": true,
    "pastEarnedDischargeEligibleDate": {
      "eligibleDate": 2022-05-22T00:00:00.000Z,
      "sentenceType": "DUAL",
    },
    "usIdLsirLevelLowModerateForXDays": {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
      "riskLevel": "MODERATE",
    },
  },
  "eligibleStartDate": 2022-10-05T00:00:00.000Z,
  "externalId": "001",
  "formInformation": {},
  "ineligibleCriteria": {},
  "stateCode": "US_ID",
}
`;

exports[`transform probation record 1`] = `
{
  "caseNotes": {
    "foo": [
      {
        "eventDate": 2022-04-06T00:00:00.000Z,
        "noteBody": "Body1",
        "noteTitle": "Title1",
      },
    ],
  },
  "eligibleCriteria": {
    "negativeUaWithin90Days": {
      "latestUaDates": [
        2022-01-03T00:00:00.000Z,
      ],
      "latestUaResults": [
        false,
      ],
    },
    "noFelonyWithin24Months": true,
    "pastEarnedDischargeEligibleDate": {
      "eligibleDate": 2022-05-22T00:00:00.000Z,
    },
    "usIdLsirLevelLowModerateForXDays": {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
      "riskLevel": "MODERATE",
    },
  },
  "eligibleStartDate": 2022-10-05T00:00:00.000Z,
  "externalId": "001",
  "formInformation": {},
  "ineligibleCriteria": {},
  "stateCode": "US_ID",
}
`;

exports[`transforms records with eligible and ineligible criteria 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "negativeUaWithin90Days": {
      "latestUaDates": [],
      "latestUaResults": [],
    },
    "noFelonyWithin24Months": true,
    "pastEarnedDischargeEligibleDate": {
      "eligibleDate": 2022-05-22T00:00:00.000Z,
    },
    "usIdLsirLevelLowModerateForXDays": {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
      "riskLevel": "MODERATE",
    },
  },
  "eligibleStartDate": 2022-10-05T00:00:00.000Z,
  "externalId": "001",
  "formInformation": {},
  "ineligibleCriteria": {
    "pastEarnedDischargeEligibleDate": {
      "eligibleDate": 2025-06-19T00:00:00.000Z,
      "sentenceType": "PAROLE",
    },
  },
  "stateCode": "US_ID",
}
`;
